crates/wolf_parse/tests/snapshots/diagnostics__e0001_leading_operator.snap
---
source: crates/wolf_parse/tests/diagnostics.rs
expression: "format!(\"{d:#?}\")"
---
Diagnostic {
    code: E0001,
    severity: Error,
    message: "this line starts with `+`, but a statement cannot begin with an operator; wolf continuations are trailing — move `+` to the end of the previous line",
    primary: LabeledSpan {
        span: Span {
            file: FileId(
                0,
            ),
            lo: 257,
            hi: 258,
        },
        label: "",
    },
    secondary: [],
    notes: [],
    suggestions: [],
}
