crates/wolf_parse/tests/snapshots/diagnostics__e0002_empty_statement.snap
---
source: crates/wolf_parse/tests/diagnostics.rs
expression: "format!(\"{d:#?}\")"
---
Diagnostic {
    code: E0002,
    severity: Error,
    message: "this `;` terminates nothing",
    primary: LabeledSpan {
        span: Span {
            file: FileId(
                0,
            ),
            lo: 222,
            hi: 223,
        },
        label: "no statement comes before it",
    },
    secondary: [],
    notes: [
        "in wolf, `;` and the line end are the same terminator, and a terminator must end a statement. Remove the `;` — it is only needed between statements sharing one line.",
    ],
    suggestions: [
        Suggestion {
            message: "remove the `;`",
            edits: [
                (
                    Span {
                        file: FileId(
                            0,
                        ),
                        lo: 222,
                        hi: 223,
                    },
                    "",
                ),
            ],
            applicability: MachineApplicable,
        },
    ],
}
