crates/wolf_parse/tests/snapshots/diagnostics__e0003_comparison_chain.snap
---
source: crates/wolf_parse/tests/diagnostics.rs
expression: "format!(\"{d:#?}\")"
---
Diagnostic {
    code: E0003,
    severity: Error,
    message: "comparison operators do not chain — did you mean `a < b && b < c`?",
    primary: LabeledSpan {
        span: Span {
            file: FileId(
                0,
            ),
            lo: 23,
            hi: 24,
        },
        label: "",
    },
    secondary: [],
    notes: [],
    suggestions: [],
}
