crates/wolf_parse/tests/snapshots/diagnostics__e0005_else_new_line.snap
---
source: crates/wolf_parse/tests/diagnostics.rs
expression: "format!(\"{d:#?}\")"
---
Diagnostic {
    code: "E0005",
    severity: Error,
    span: Span {
        file: FileId(
            0,
        ),
        lo: 32,
        hi: 36,
    },
    message: "`else` must be on the same line as the `}` that closes the then-block — write `} else`",
    notes: [],
}
