crates/wolf_parse/tests/snapshots/diagnostics__e0006_structlit_cond.snap
---
source: crates/wolf_parse/tests/diagnostics.rs
expression: "format!(\"{d:#?}\")"
---
Diagnostic {
    code: E0006,
    severity: Error,
    message: "struct literals are not allowed in condition or scrutinee position — wrap the literal in parentheses: `(Path { … })`",
    primary: LabeledSpan {
        span: Span {
            file: FileId(
                0,
            ),
            lo: 291,
            hi: 292,
        },
        label: "",
    },
    secondary: [],
    notes: [],
    suggestions: [],
}
