crates/wolf_parse/tests/snapshots/diagnostics__e0008_minimal.snap
---
source: crates/wolf_parse/tests/diagnostics.rs
expression: "format!(\"{d:#?}\")"
---
Diagnostic {
    code: "E0008",
    severity: Error,
    span: Span {
        file: FileId(
            0,
        ),
        lo: 3,
        hi: 7,
    },
    message: "`when` is a reserved keyword and cannot be a function name; pick another name (wolf has no raw identifiers)",
    notes: [],
}
