crates/wolf_parse/tests/snapshots/diagnostics__e0008_when_reserved.snap
---
source: crates/wolf_parse/tests/diagnostics.rs
expression: "format!(\"{d:#?}\")"
---
Diagnostic {
    code: E0008,
    severity: Error,
    message: "`when` is a reserved keyword, so it cannot name a function",
    primary: LabeledSpan {
        span: Span {
            file: FileId(
                0,
            ),
            lo: 142,
            hi: 146,
        },
        label: "pick another name",
    },
    secondary: [],
    notes: [
        "all 50 keywords are reserved everywhere, and wolf has no raw identifiers. `when_` is the usual dodge, or a more specific word.",
    ],
    suggestions: [],
}
