crates/wolf_parse/tests/snapshots/diagnostics__e0201_fields_need_comma.snap
---
source: crates/wolf_parse/tests/diagnostics.rs
expression: "format!(\"{d:#?}\")"
---
Diagnostic {
    code: E0201,
    severity: Error,
    message: "expected `,` between the struct pattern's fields",
    primary: LabeledSpan {
        span: Span {
            file: FileId(
                0,
            ),
            lo: 23,
            hi: 23,
        },
        label: "",
    },
    secondary: [],
    notes: [
        "the separating comma is required between pattern members ([gram.pat])",
    ],
    suggestions: [
        Suggestion {
            message: "add the comma",
            edits: [
                (
                    Span {
                        file: FileId(
                            0,
                        ),
                        lo: 22,
                        hi: 22,
                    },
                    ",",
                ),
            ],
            applicability: MachineApplicable,
        },
    ],
}
